# adventofcode

2015/01/: part1.py  part2.py  wip.py
2015/02/: part1.py  part2.py
2015/03/: part1.py  part2.py  wip.py
2015/04/: part1.py  part2.py
2015/05/: part1.py  wip.py
2015/06/: part1.py  part2.py
2015/07/: part1.py  part2.py
2015/08/: part1.py  part2.py  wip.py
2015/09/: part1.py  part2.py
2015/1/: a.py  b.py
2015/10/: a.py  part1.py  wip.py
2015/11/: a.py  part1.py  part2.py  wip.py
2015/12/: a.py  part1.py  part2.py  wip.py
2015/13/: a.py  part1.py  part2.py
2015/14/: a.py  part1.py  part2.py
2015/15/: a.py  part1.py  wip.py
2015/16/: a.py  part1.py  part2.py
2015/17/: a.py  part1.py  part2.py
2015/18/: a.py
2015/19/: a.py
2015/2/: a.py  b.py
2015/20/: a.py  part1.py  wip.py
2015/21/: a.py  part1.py  part2.py
2015/22/: a.py  part1.py  part2.py
2015/23/: a.py  part1.py  part2.py
2015/24/: a.py  part1.py  part2.py  wip.py
2015/25/: a.py  wip.py
2015/3/: a.py  b.py
2015/4/: a.py
2015/5/: a.py  b.py
2015/6/: a.py  b.py
2015/7/: a.py
2015/8/: a.py
2015/9/: a.py
2015/python3/: wip.py
2016/1/: app.py
2016/10/: app.py
2016/11/: app.py  tmp.txt
2016/12/: a.out  app.py  in2.txt  main.c  main.s  main2.c  tmp.awk
2016/13/: app.py
2016/14/: app.py
2016/15/: app.py
2016/16/: app.py
2016/17/: app.py
2016/18/: app.py
2016/19/: app.py
2016/2/: app.py
2016/20/: app.py
2016/21/: app.py
2016/22/: app.py
2017/: Cargo.toml
2019/: Cargo.toml
2019/src/: intcode.rs  lib.rs
2024/: .rubocop.yml
(+449 files in other folders)
