[package]
name = "advent_of_code_2019"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.2"
futures = "0.3.19"
threadpool = "1.8.1"
pipe-channel = "1.3.0"
counter = "0.5.2"
num = "0.4.0"
num-integer = "0.1.44"
queues = "1.0.2"
pathfinding = "3.0.7"